--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "anlutro/l4-settings": "^0.8.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.4",
         "laravel/tinker": "^1.0",
         "lavary/laravel-menu": "^1.7"
     },
